--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
 workflows:
   infra:
     jobs:
-      - deploy:
+      - infra:
           filters:
             branches:
               only: main
